# cs-fantasy-map-helper

./: .gitignore  README.md  cli.py  example_map.json  main.py  plan.md  pyproject.toml  requirements.txt  setup_example_map.py
docs/: testing_guidelines.md
src/: conftest.py  main.py
src/application/: __init__.py  game_map_service.py  game_map_service_test.py
src/application/interfaces/: __init__.py  map_repository.py
src/application/usecases/: location_management.py  location_management_test.py  map_management.py  map_management_test.py  resource_management.py  resource_management_test.py
src/domain/entities/: __init__.py  direction.py  direction_test.py  location.py  location_test.py
src/infrastructure/: __init__.py
src/infrastructure/cli/: __init__.py  example_setup.py  game_cli.py  game_cli_test.py
src/infrastructure/cli/commands/: __init__.py  base_commands.py  base_commands_test.py  interactive.py  interactive_test.py  location_commands.py  location_commands_test.py  map_commands.py  map_commands_test.py  resource_commands.py  resource_commands_test.py
src/infrastructure/persistence/: __init__.py  json_map_repository.py  json_map_repository_test.py
