[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-survival-map-navigator"
version = "1.0.0"
description = "A CLI tool to help players navigate and manage locations in Card Survival game"
authors = [
    { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "pylint>=2.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
card-survival-map = "src.main:main"
