[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-survival-map-navigator"
version = "1.0.0"
description = "A CLI tool to help players navigate and manage locations in Card Survival game"
authors = [
    { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "pylint>=2.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
card-survival-map = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["*_test.py"]
python_functions = ["test_*"]
addopts = """
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    -v
"""

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "raise NotImplemented",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true
